syntax = "proto3";

package order;
option go_package = "OrderService/api/pb";

import "google/protobuf/timestamp.proto";

// Order entity message
message Order {
  string id = 1;                // UUID
  string user_id = 2;           // UUID of the user
  string car_id = 3;            // UUID of the car
  int32 quantity = 4;           // number of cars ordered
  double total_price = 5;       // total cost of the order
  string status = 6;            // e.g., "Pending", "Confirmed", "Cancelled"
  google.protobuf.Timestamp created_at = 7; // timestamp of creation
}

// CreateOrder RPC
message CreateOrderRequest {
  string user_id = 1;
  string car_id = 2;
  int32 quantity = 3;
  double total_price = 4;
  string status = 5; // optional, default "Pending"
}

message CreateOrderResponse {
  Order order = 1;
}

// GetOrder RPC
message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

// UpdateOrder RPC
message UpdateOrderRequest {
  Order order = 1; // id field must be set
}

message UpdateOrderResponse {
  Order order = 1;
}

// DeleteOrder RPC
message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
}

// ListOrders RPC
message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}

// OrderService definition
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
