syntax = "proto3";

package user;

import "google/api/annotations.proto";

option go_package = "UserService/api/pb";

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  string role = 5;
}

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/user/register"
      body: "*"
    };
  };
  rpc LoginUser (LoginUserRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/user/login"
      body: "*"
    };
  };
  rpc GetProfile (GetProfileRequest) returns (ProfileResponse) {
    //option (google.api.http) = {
    //  get: "/user/profile/{userID}"
    //};
    option (google.api.http) = {
      get: "/user/profile"
    };
  }
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/user/list"
    };
  }
  rpc SendVerificationCode(SendCodeRequest) returns (SendCodeResponse) {
    option (google.api.http) = {
      post: "/user/send_code"
      body: "*"
    };
  }
  rpc ConfirmEmail(ConfirmEmailRequest) returns (ConfirmEmailResponse) {
    option (google.api.http) = {
      post: "/user/confirm"
      body: "*"
    };
  }

  rpc ChangeUserRole(ChangeUserRoleRequest) returns (ChangeUserRoleResponse) {
    option (google.api.http) = {
      put:  "/user/role"
      body: "*"
    };
  }
}

message ChangeUserRoleRequest {
  string user_id = 1;
  string role = 2;
}

message ChangeUserRoleResponse {
  User user = 1;
  string status = 2;
}

message SendCodeRequest {
  string email = 1;
}

message SendCodeResponse {
  string status = 1; // e.g. "code_sent"
}

message ConfirmEmailRequest {
  string email = 1;
  string code  = 2;
}

message ConfirmEmailResponse {
  string token  = 1;
  string status = 2; // e.g. "verified"
}

message GetProfileRequest {
  //string userID = 1;
}

message ProfileResponse {
  User user = 1;
}

message ListUsersRequest {}
message ListUsersResponse {
  repeated User users = 1;
}

message RegisterUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string role = 4; //admin or user
}

message VerifyUserRequest {
  string token = 1;
}

message LoginUserRequest {
  string identifier = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string status = 2;
}

message VerifyResponse {
  string status = 1;
}